--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,7 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "UserID=postgres; Password=151103; Host=localhost; Port=5432; Database=FlorescerDb;"
+   // "UserID=florescerAdm; Password=Fl0r3$cer; Host=dbflorescer.postgres.database.azure.com; Port=5432; Database=postgres;"
   },
   "AppSetting": {
     "SecretKey": "CHAVEDESEGURANCA",
