--- a/appsettings.json
+++ b/appsettings.json
@@ -6,8 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "UserID=postgres; Password=151103; Host=localhost; Port=5432; Database=FlorescerDb;"
-   // "UserID=florescerAdm; Password=Fl0r3$cer; Host=dbflorescer.postgres.database.azure.com; Port=5432; Database=postgres;"
+    "DefaultConnection": "UserID=florescerAdm; Password=Fl0r3$cer; Host=dbflorescer.postgres.database.azure.com; Port=5432; Database=postgres;"
   },
   "AppSetting": {
     "SecretKey": "CHAVEDESEGURANCA",
