FLC-70 update do meu jardim redesenhado

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "UserID=florescerAdm; Password=Fl0r3$cer; Host=dbflorescer.postgres.database.azure.com; Port=5432; Database=postgres;",
+    //"DefaultConnection": "UserID=florescerAdm; Password=Fl0r3$cer; Host=dbflorescer.postgres.database.azure.com; Port=5432; Database=postgres;",
+    "DefaultConnection": "UserID=postgres; Password=151103; Host=localhost; Port=5433; Database=FlorescerDb;"
   },
   "AppSetting": {
     "SecretKey": "CHAVEDESEGURANCA",
